# ChangeLog for sys-fs/lvm2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.201 2010/02/02 18:15:22 jer Exp $

  19 Apr 2010; Daniel Robbins <drobbins@funtoo.org> lvm2-2.02.63.ebuild:
  New ebuild for testing.

  02 Feb 2010; Jeroen Roovers <jer@gentoo.org> lvm2-2.02.56-r2.ebuild:
  Stable for HPPA (bug #297439).

  19 Jan 2010; nixnut <nixnut@gentoo.org> lvm2-2.02.56-r2.ebuild:
  ppc stable #297439

  11 Jan 2010; Robin H. Johnson <robbat2@gentoo.org> lvm2-2.02.56-r2.ebuild,
  lvm2-2.02.56-r3.ebuild:
  Bug #300003: Need pkgconfig for autoreconf.

  07 Jan 2010; Raúl Porcel <armin76@gentoo.org> lvm2-2.02.56-r2.ebuild:
  ia64/s390/sh/sparc stable wrt #297439

*lvm2-2.02.56-r3 (05 Jan 2010)

  05 Jan 2010; Matthias Schwarzott <zzam@gentoo.org>
  +files/64-device-mapper.rules-2.02.56-r3, +lvm2-2.02.56-r3.ebuild:
  Fix udev rule for mapper/control device, Bug #295186.

  02 Jan 2010; Markus Meier <maekke@gentoo.org> lvm2-2.02.56-r2.ebuild:
  amd64/arm stable, bug #297439

  02 Jan 2010; Brent Baude <ranger@gentoo.org> lvm2-2.02.56-r2.ebuild:
  Marking lvm2-2.02.56-r2 ppc64 for bug 297439

  29 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  lvm2-2.02.56-r2.ebuild:
  stable x86, bug 297439

*lvm2-2.02.56-r2 (26 Dec 2009)

  26 Dec 2009; Robin H. Johnson <robbat2@gentoo.org>
  +lvm2-2.02.56-r2.ebuild, +files/lvm2-2.02.56-lvm2create_initrd.patch:
  Bug #296198 redux: package in the contrib lvm2create_initrd script after
  patching it for users that have non-genkernel initrds.

  20 Dec 2009; Raúl Porcel <armin76@gentoo.org> lvm2-2.02.56-r1.ebuild:
  alpha stable wrt #297439

  11 Dec 2009; Raúl Porcel <armin76@gentoo.org> lvm2-2.02.51-r1.ebuild:
  s390/sh stable

  11 Dec 2009; Raúl Porcel <armin76@gentoo.org> lvm2-2.02.51.ebuild,
  lvm2-2.02.51-r1.ebuild, lvm2-2.02.51-r2.ebuild, lvm2-2.02.51-r3.ebuild,
  lvm2-2.02.56-r1.ebuild:
  Add ~s390/~sh
