@@ -1,4 +1,4 @@
-# This series applies on GIT commit 7a3d650790940f5f98622b090ef2807eebc05cb5
+# This series applies on GIT commit 305655271074e44a060181a8e3596d1949d61534
 01-2008.0-profiles
 02-virtuals
 03-use
