@@ -70,6 +70,7 @@ DIST LVM2.2.02.51.tgz 790458 RMD160 7ca55e29c6d780b4b052b07eeabbd731a034721f SHA
 DIST LVM2.2.02.56.tgz 822318 RMD160 b9bb04df127fe58d2b483035b2c17e2b049695d3 SHA1 1a70cb4d4fe7566aace9d38ee18413c79e91b684 SHA256 9c96ef2cb4a9606cb6a4af795cbb5503b04d676179b0c70a9883593992622f43
 DIST LVM2.2.02.63.tgz 862513 RMD160 49f005520ec92013d8dcb246e82236429aa09869 SHA1 0333d51b33a73cd2f38854557e72577a0523b7c2 SHA256 e41a163ba97de66e0825188311b1f0b4b181943a16e0a04971653baf99ad3036
 DIST LVM2.2.02.65.tgz 872647 RMD160 a1454fbd94d3e8e0936ea57336d6345c9853cb26 SHA1 8c89a08bfed3be734c5ea254744af1e5ecbb7163 SHA256 2a4157b91b7ad5ea84359e8548b64947611beea01862e010be71f54b649e7ad1
+DIST LVM2.2.02.68.tgz 896253 RMD160 b595e43194c58f635b76a340ee42d98a9855986b SHA1 99ef99dcb9aac6c391a8b58a539a9abb1af61949 SHA256 aee0fe71c27406ce61f026a3c8e0a8c510cec17617f5452d4dfef035b52a45ec
 EBUILD lvm2-2.01.13.ebuild 1470 RMD160 125ecf8a32609d67876e16afa155aa256bdc22ee SHA1 95c96a2158c40bc325da6eeaded050e9e426a0e5 SHA256 b3ee4c923da035604cdf69673c12824c7b74a1716550496ce38d9281d39fa6ef
 EBUILD lvm2-2.02.33-r1.ebuild 4538 RMD160 c754ec3bd1ed9a4e405f72966fef3ec0736c824b SHA1 ef5a5926d943a94f055a6326817e301295e20c48 SHA256 ae0289f37158c00ef8b5c10de351452ed55d7dfa8e9bbf40fa54659adefc947c
 EBUILD lvm2-2.02.33.ebuild 4509 RMD160 c71985cd049d14ae22eea86b2ba742478a2683c1 SHA1 44dbc8c1c4c3f6c9f5e05fd00393233df6309ded SHA256 8fc4a8ae48d6ae2683cd58edd7c978b2b2e30738b3a2f8d747e045be3e7a21c9
@@ -98,5 +99,6 @@ EBUILD lvm2-2.02.56.ebuild 6486 RMD160 3a14e38c19adf2f87e03cf092cb921817e43a029 
 EBUILD lvm2-2.02.63.ebuild 6872 RMD160 ab713cc137c4f07e9ff1c61bc9b5dc6f431caf46 SHA1 063b38ffb4aa68d517cc7f1ec3162b5c5278024a SHA256 e1525fefed4a1414824a7e96b301c996f477dbb79fd4342a5e11c5af2a65f588
 EBUILD lvm2-2.02.65-r1.ebuild 4206 RMD160 9c3e479d067d4f12a4a14777e556f95ce7a43e72 SHA1 54ad226df67bbe9f4233908e962e4ee3e2f8305f SHA256 f65ba7bbe0193b570fd507bec45bdd41e2abc5a5053a02e802a52ec2145b5b21
 EBUILD lvm2-2.02.65.ebuild 3994 RMD160 6d4a0d689874f33b879ab6eb04875079a66fcef1 SHA1 16fe1a508009f6813c5e34477419796a2723b61e SHA256 96077db142ac71a57a970bd0109b2f1c07302b0dd799f121bc61a95b916dd156
-MISC ChangeLog 35423 RMD160 e878b5d59861ed64c048a3c00872efb0178c6cac SHA1 7c5d340bcdd96ed35497542d2c626da87391955d SHA256 38b0a8aa054031bec33907d3efbe317ef66603ada77dccd06fcf53cc5890c836
+EBUILD lvm2-2.02.68.ebuild 4207 RMD160 2251d3ee694290d2958a2c47553776018790ef99 SHA1 847339d993f3eb3bb8b521dcc5765201dc155509 SHA256 e951e8601fb1725f873e47bdcc41c1a39be930f0691237833df840e5a5cdc762
+MISC ChangeLog 35524 RMD160 268401a667d244c53c134de732aba2c3abbff40c SHA1 d497c9638341857a49892c5ccc22e3d3310a6f26 SHA256 2eac6dd665d9479f1c388d08460e044513792c4c838f370319956c1d38df733b
 MISC metadata.xml 792 RMD160 f60db9169ee273ca2f97fa5e69d4e5329e988164 SHA1 42f85f30477c65a164a11e172db7e250f442dca5 SHA256 87ced5a3a6102985f7c2a619dd52f65e62ae916f8921c8e7115a25452cd44b7f
