@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.201 2010/02/02 18:15:22 jer Exp $
 
+  29 Jun 2010; Daniel Robbins <drobbins@funtoo.org> +lvm2-2.02.68.ebuild:
+  new ebuild for testing.
+
   19 Apr 2010; Daniel Robbins <drobbins@funtoo.org> lvm2-2.02.63.ebuild:
   New ebuild for testing.
 
